Contact nodal now has a close button, cleaned up code, fixed collapsing margin issue

--- a/portfolio.css
+++ b/portfolio.css
@@ -1,14 +1,3 @@
-@font-face {
-	font-family: 'BebasNeue';
-	src: url('web\ fonts/bebasneue_regular_macroman/specimen_files/BebasNeue-webfont.eot');
-	src: url('web\ fonts/bebasneue_regular_macroman/specimen_files/BebasNeue-webfont.eot?#iefix') format('embedded-opentype'),
-		url('web\ fonts/bebasneue_regular_macroman/specimen_files/BebasNeue-webfont.woff') format('woff'), 
-		url('web\ fonts/bebasneue_regular_macroman/specimen_files/BebasNeue-webfont.ttf') format('truetype'), 
-		url('web\ fonts/bebasneue_regular_macroman/specimen_files/BebasNeue-webfont.svg#webfont') format('svg');
-font-weight: normal;
-font-style: normal;
-}
-
 html, body {
 	height: 100%;
 	width: 100%;
@@ -34,81 +23,48 @@ a:clicked {
 	background-size: 100% 100%;
 	top: 0;
 	width: 100%;
-/*	height: 681px;
-*/}
+	z-index: 1;
+}
 
 #partzero{
-top: 0;
-width: 100%;
-position: absolute;
-/*height: 681px*/;
-background: black;
-opacity: 0.8;
+	top: 0;
+	width: 100%;
+	position: absolute;
+	z-index: 2;
+	background: black;
+	opacity: 0.8;
 }
 
 #parttwo {
 	background-image: url(http://bit.ly/1m0oapG);
 	background-size: 100% 100%;
 	width: 100%;
-	/*height: 682px;*/
+	z-index: 1;
 }
 
 #partthree {
 	background-image: url(http://bit.ly/1m0oapG);
 	background-size: 100% 100%;
 	width: 100%;
-	/*height: 682px;*/
-}
-
-#contact {
-	top: 0;
-	right: 0;
-	font-size: 16pt;
-	padding: 5px 7.5px;
-}
-
-#contact p {
-	display: none;
-}
-
-#number {
-	color: #0099FF;
-}
-
-#number:hover {
-	font-weight: bold;
-	text-decoration: underline;
-}
-
-#email {
-	color: #FF3300;
-}
-
-#email:hover {
-	font-weight: bold;
-	text-decoration: underline;
-}
-
-#projects {
-	list-style-type: none !important;
-	margin: 0;
-	padding: 0;
-}
-
-#experience {
-	list-style-type: disc;
+	z-index: 1;
 }
 
 #title {
 	position: relative;
-	margin-top: 2.5em;
+	top: 2.5em;/*Collapsing margins*/
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 9em;
 	padding: 7.5px 15px;
 	font-size: 50pt;
+	font-family: 'Open Sans', 'BebasNeue', Arial, Impact;
+	font-weight: 700;
+	color: #FFF;
+	text-align: center;
+	opacity: 0.75;
 	border-radius: 5px;
 	font-style: italic;
+	z-index: 3;
 }
 
 .item {
@@ -122,37 +78,15 @@ opacity: 0.8;
 	padding-bottom: 30px;
 }
 
-.expand {
-	font-family: 'Open Sans', 'BebasNeue', Arial, Impact;
-	font-weight: 700;
-	color: #FFF;
-	text-align: center;
-	/* background-color: black; */
-	opacity: 0.75;
-}
-
-.highlight {
-	background-color: yellow;
-	color: #000;
-}
-
-.personal_content {
-	text-align: center;
-	font-size: 12pt;
-	font-weight: 600;
-	color: #F00;
-	display: none;
-}
-
-#my_contact{
-	z-index: 15;
+#contact{
+	position: absolute;
+	z-index: 4;
 	width: 600px;
 	height: 230px;
 	left: 0;
 	right: 0;
 	margin-left: auto;
 	margin-right: auto;
-	position: absolute;
 	background: white;
 	border-radius: 10px;
 	padding-left: 25px;
@@ -174,7 +108,7 @@ opacity: 0.8;
 	border-top: 2px solid #000;
 }
 
-.myexp:hover {
+.myexp:hover, #arrow_container:hover, #close:hover {
 	cursor: pointer;
 }
 
@@ -208,7 +142,7 @@ opacity: 0.8;
 	text-align: center;
 	color: #FF5A5A;
 	padding: 0;
-	z-index: 9;
+	z-index: 3;
 	left: 0;
 	right: 0;
 	margin-left: auto;
@@ -217,7 +151,6 @@ opacity: 0.8;
 }
 
 #arrow_container:hover{
-	cursor:pointer;
 	color: #FF3838;
 }
 
@@ -229,28 +162,33 @@ opacity: 0.8;
 	position: absolute;
 	top: 15px;
 	left: 14px;
-	/* right: 0; */
-	/* margin-left: auto; */
-	/* margin-right: auto; */
 	font-size: 33px;
 }
 
 #contact_icon {
-position: absolute;
-top: 53%;
-right: 0;
-font-size: 4em;
-width: 57px;
-height: 60px;
-left: 0;
-margin-left: auto;
-margin-right: auto;
-z-index: 15;
-color: #FF5A5A;
--webkit-transition: color 0.5s ease-in-out;
+	position: absolute;
+	top: 53%;
+	right: 0;
+	font-size: 4em;
+	width: 57px;
+	height: 60px;
+	left: 0;
+	margin-left: auto;
+	margin-right: auto;
+	z-index: 3;
+	color: #FF5A5A;
+	-webkit-transition: color 0.5s ease-in-out;
 }
 
 #contact_icon:hover {
 	cursor:pointer;
 	color: #FF3838;
+}
+
+#close {
+	position: absolute;
+	top: 0px;
+	right: 5px;
+	color: #000;
+	font-size: 16pt;
 }
